# strands

./: .bedrock_agentcore.yaml  .env.example  .gitignore  README.md  cohort_specialist.py  contribution_margin_specialist.py  embedded_agent_tool.py  market_research_specialist.py  memo_review_specialist.py  payer_rate_negotiation_specialist.py  product_recommendation_assistant.py  pyproject.toml  revenue_cycle_specialist.py  specialists.py  strategy_memo_specialist.py  team_lead.py
.bedrock_agentcore/team_lead/: Dockerfile
agentcore/: manifest.yaml
src/agentcore_hosting/: __init__.py  base.py  config.py  runtime.py  team_lead.py
src/agentcore_hosting/tools/: __init__.py  company_data.py  contribution_margin.py
